Permit illegal-reflective-access warnings in output